<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitnessNotes</string>
    <string name="app_description">Allows you to record you series in easy way and export them to CSV in File on your SD card</string>
    <string name="action_settings">Settings</string>
    <string name="button2">+ 2</string>
    <string name="button10">+ 10</string>
    <string name="button5">+ 5</string>
    <string name="button1">+ 1</string>
    <string name="button0">  0</string>
    <string name="buttonNewTraining">New Training</string>
    <string name="buttonStopTraining">Stop Trainging</string>
    <string name="buttonStore">Store serie</string>
    <string name="textViewHistory">History</string>
    <string name="textViewWeight"	  >Weight \n(Level) </string>
    <string name="textViewRepetitions">Repetitions \n(Duration) </string>
    <string name="textViewExercise">Exercise\nname </string>
    <string name="general"> .</string>
    <string name="action_export">Export to CSV</string>

</resources>